--- a/Integrales.html
+++ b/Integrales.html
@@ -157,6 +157,6 @@
   </footer>
 
   <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">💬</a>
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
