i Changes to be committed:

--- a/Integrales.html
+++ b/Integrales.html
@@ -147,9 +147,9 @@
       </div>
 
       <div class="footer__links">
-        <a href="#" onclick="return false;">Política de Cookies</a>
-        <a href="#" onclick="return false;">Política de Privacidad</a>
-        <a href="#" onclick="return false;">Aviso Legal</a>
+        <a href="politicascookies.html" onclick="return true;">Política de Cookies</a>
+        <a href="politicasprivacidad.html" onclick="return true;">Política de Privacidad</a>
+        <a href="avisolegal.html" onclick="return true;">Aviso Legal</a>
       </div>
 
       <p class="footer__copy muted">© <span id="year"></span> Montillas Holding.</p>
