--- a/Portafolio.html
+++ b/Portafolio.html
@@ -53,9 +53,9 @@
 
         <!-- filtros -->
         <div class="filters" role="tablist" aria-label="Filtros de proyectos">
-          <button class="chip" data-filter="integral" role="tab">Integrales</button>
-          <button class="chip" data-filter="cocina" role="tab">Cocinas</button>
-          <button class="chip" data-filter="bano" role="tab">Baños</button>
+          <button class="chip" data-filter="integral" role="tab"><a href="Integrales.html" onclick="return true;">Integrales</button></a>
+          <button class="chip" data-filter="cocina" role="tab"><a href="cocinas.html" onclick="return true;">Cocinas</butto></a>
+          <button class="chip" data-filter="bano" role="tab"><a href="banos.html" onclick="return true;">Baños</button></a>
         </div>
 
         <!-- grid de before/after -->
