--- a/cocinas.html
+++ b/cocinas.html
@@ -126,18 +126,31 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="container footer__inner">
       <div class="footer__brand">
-        <img class="footer__logo" src="Assets/LOGO-SECUNDARIO-3.png" alt="Logo" />
+        <img class="footer__logo" src="Assets/LOGO-SECUNDARIO-3.png" alt="Logo de la empresa" />
         <div>
           <strong>Montillas Holding</strong>
           <p class="muted">Reformas integrales · Cocinas · Baños</p>
         </div>
       </div>
-      <p class="footer__copy muted">© <span id="year"></span> Montillas Holding.</p>
+
+      <div class="footer__links">
+        <a href="politicascookies.html" onclick="return true;">Política de Cookies</a>
+        <a href="politicasprivacidad.html" onclick="return true;">Política de Privacidad</a>
+        <a href="avisolegal.html" onclick="return true;">Aviso Legal</a>
+      </div>
+
+      <p class="footer__copy muted">© <span id="year"></span> Montillas Holding. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <!-- Floating WhatsApp -->
+  <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">
+    💬
+  </a>
 
   <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">💬</a>
   <script src="script.js"></script>
