--- a/avisolegal.html
+++ b/avisolegal.html
@@ -24,7 +24,7 @@
     ul{ padding-left:18px; }
     .muted{ color:#555; }
     .box{
-      background:#fafafa;
+      background:#090909;
       border:1px solid #eee;
       padding:16px;
       border-radius:14px;
@@ -38,9 +38,10 @@
       padding:10px 14px;
       border-radius:12px;
       text-decoration:none;
-      background:#fff;
+      background:#151515;
     }
   </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -183,6 +184,31 @@
       <a href="index.html" class="btn">Volver a inicio</a>
     </p>
   </main>
+    <!-- Footer -->
+  <footer class="footer">
+    <div class="container footer__inner">
+      <div class="footer__brand">
+        <img class="footer__logo" src="Assets/LOGO-SECUNDARIO-3.png" alt="Logo de la empresa" />
+        <div>
+          <strong>Montillas Holding</strong>
+          <p class="muted">Reformas integrales · Cocinas · Baños</p>
+        </div>
+      </div>
+
+      <div class="footer__links">
+        <a href="politicascookies.html" onclick="return true;">Política de Cookies</a>
+        <a href="politicasprivacidad.html" onclick="return true;">Política de Privacidad</a>
+        <a href="avisolegal.html" onclick="return true;">Aviso Legal</a>
+      </div>
+
+      <p class="footer__copy muted">© <span id="year"></span> Montillas Holding. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- Floating WhatsApp -->
+  <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">
+    💬
+  </a>
 
   <!-- ✅ Importante: en esta página NO cargamos cookies.css ni cookies.js
        para que NO aparezca el popup. -->
