--- a/index.html
+++ b/index.html
@@ -130,6 +130,75 @@
       </div>
     </section>
 
+    <section class="about" id="nosotros">
+  <div class="about__container">
+    <div class="about__content">
+      <p class="about__eyebrow">Sobre nosotros</p>
+      <h2 class="about__title">Reformas con acabados de calidad y plazos claros</h2>
+
+      <p class="about__text">
+        En <strong>Montillas Holding</strong> somos un equipo de profesionales especializados en reformas integrales y parciales.
+        Nos enfocamos en un resultado impecable, cuidando cada detalle desde el primer día: planificación, materiales y ejecución.
+      </p>
+
+      <p class="about__text">
+        Trabajamos con una idea sencilla: <strong>hacerte la reforma fácil</strong>. Te asesoramos, te damos un presupuesto claro
+        y coordinamos el proyecto para que no tengas que preocuparte por nada. Si quieres renovar tu vivienda, local u oficina,
+        estamos listos para ayudarte.
+      </p>
+
+      <ul class="about__bullets">
+        <li>Presupuesto detallado y sin sorpresas</li>
+        <li>Coordinación de gremios y seguimiento de obra</li>
+        <li>Acabados profesionales y limpieza al finalizar</li>
+      </ul>
+
+      <div class="about__cta">
+        <a class="about__btn" href="#contacto">Pedir presupuesto</a>
+        <a class="about__link" href="tel:+34642584490">Llámanos: 642 58 44 90</a>
+      </div>
+    </div>
+
+    <div class="about__card">
+      <h3 class="about__cardTitle">Lo que nos diferencia</h3>
+
+      <div class="about__grid">
+        <div class="about__item">
+          <span class="about__icon">🧱</span>
+          <div>
+            <p class="about__itemTitle">Calidad de obra</p>
+            <p class="about__itemText">Materiales y ejecución con estándares profesionales.</p>
+          </div>
+        </div>
+
+        <div class="about__item">
+          <span class="about__icon">📅</span>
+          <div>
+            <p class="about__itemTitle">Planificación</p>
+            <p class="about__itemText">Fechas y fases claras para que sepas qué ocurre en cada momento.</p>
+          </div>
+        </div>
+
+        <div class="about__item">
+          <span class="about__icon">🤝</span>
+          <div>
+            <p class="about__itemTitle">Trato cercano</p>
+            <p class="about__itemText">Te asesoramos y resolvemos dudas durante todo el proyecto.</p>
+          </div>
+        </div>
+
+        <div class="about__item">
+          <span class="about__icon">✅</span>
+          <div>
+            <p class="about__itemTitle">Entrega cuidada</p>
+            <p class="about__itemText">Revisión final y limpieza para dejarlo listo para disfrutar.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
         <!-- Works / Gallery -->
     <section class="section" id="trabajos">
       <div class="container">
