--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
   <div class="about__container">
     <div class="about__content">
       <p class="about__eyebrow">Sobre nosotros</p>
-      <h2 class="about__title">Reformas con acabados de calidad y plazos claros</h2>
 
       <p class="about__text">
         En <strong>Montillas Holding</strong> somos un equipo de profesionales especializados en reformas integrales y parciales.
@@ -154,8 +153,7 @@
       </ul>
 
       <div class="about__cta">
-        <a class="about__btn" href="#contacto">Pedir presupuesto</a>
-        <a class="about__link" href="tel:+34642584490">Llámanos: 642 58 44 90</a>
+        <a class="about__link" href="tel:+34642584490"></a>
       </div>
     </div>
 
