i Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@
 
         <div class="gallery" id="gallery">
           <figure class="tile" data-type="integral">
-            <img src="https://images.unsplash.com/photo-1502005097973-6a7082348e28?auto=format&fit=crop&w=1200&q=70" alt="Reforma integral" />
+            <img src="Assets/EtradaPrincipal2.jpeg" alt="Reforma integral" />
             <figcaption><li><a href="Integrales.html">Reformas Integrales</a></li></figcaption>
           </figure>
           <figure class="tile" data-type="cocina">
-            <img src="https://images.unsplash.com/photo-1556912172-45b7abe8b7e1?auto=format&fit=crop&w=1200&q=70" alt="Reforma de cocina" />
+            <img src="Assets/Cocina1.jpeg" alt="Reforma de cocina" />
             <figcaption><li><a href="cocinas.html">Reforma de Cocinas</a></li></figcaption>
           </figure>
           <figure class="tile" data-type="bano">
-            <img src="https://images.unsplash.com/photo-1600566753376-12c8ab7fb75b?auto=format&fit=crop&w=1200&q=70" alt="Reforma de baño" />
+            <img src="Assets/Baño1.jpeg" alt="Reforma de baño" />
             <figcaption><li><a href="banos.html"> Reformas de Baños</a></li></figcaption>
           </figure>
         </div>
