--- a/Portafolio.html
+++ b/Portafolio.html
@@ -68,9 +68,9 @@
             </div>
 
             <div class="before-after" data-ba>
-              <img class="ba__img ba__after" src="https://images.unsplash.com/photo-1560448204-603b3fc33ddc?auto=format&fit=crop&w=1600&q=70" alt="Después - salón reformado">
+              <img class="ba__img ba__after" src="Assets/ReformaIntegralHecha1.png" alt="Después - salón reformado">
               <div class="ba__beforeWrap" data-beforewrap>
-                <img class="ba__img ba__before" src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1600&q=70" alt="Antes - salón">
+                <img class="ba__img ba__before" src="Assets/ReformaIntegralLimpia1.png" alt="Antes - salón">
               </div>
 
               <div class="ba__labels">
@@ -95,9 +95,9 @@
             </div>
 
             <div class="before-after" data-ba>
-              <img class="ba__img ba__after" src="https://images.unsplash.com/photo-1600489000022-c2086d79f9d4?auto=format&fit=crop&w=1600&q=70" alt="Después - cocina">
+              <img class="ba__img ba__after" src="Assets/CocinaReformada1.png" alt="Después - cocina">
               <div class="ba__beforeWrap" data-beforewrap>
-                <img class="ba__img ba__before" src="https://images.unsplash.com/photo-1556912172-45b7abe8b7e1?auto=format&fit=crop&w=1600&q=70" alt="Antes - cocina">
+                <img class="ba__img ba__before" src="Assets/Cocinalimpia1.png" alt="Antes - cocina">
               </div>
 
               <div class="ba__labels">
@@ -122,9 +122,9 @@
             </div>
 
             <div class="before-after" data-ba>
-              <img class="ba__img ba__after" src="https://images.unsplash.com/photo-1586798271654-0471bb2b0517?auto=format&fit=crop&w=1600&q=70" alt="Después - baño">
+              <img class="ba__img ba__after" src="Assets/Bañoreformado1.png" alt="Después - baño">
               <div class="ba__beforeWrap" data-beforewrap>
-                <img class="ba__img ba__before" src="https://images.unsplash.com/photo-1600566753376-12c8ab7fb75b?auto=format&fit=crop&w=1600&q=70" alt="Antes - baño">
+                <img class="ba__img ba__before" src="Assets/Bañolimpio1.png" alt="Antes - baño">
               </div>
 
               <div class="ba__labels">
@@ -150,18 +150,31 @@
     </section>
   </main>
 
+ <!-- Footer -->
   <footer class="footer">
     <div class="container footer__inner">
       <div class="footer__brand">
-        <img class="footer__logo" src="Assets/LOGO-SECUNDARIO-3.png" alt="Logo" />
+        <img class="footer__logo" src="Assets/LOGO-SECUNDARIO-3.png" alt="Logo de la empresa" />
         <div>
           <strong>Montillas Holding</strong>
           <p class="muted">Reformas integrales · Cocinas · Baños</p>
         </div>
       </div>
-      <p class="footer__copy muted">© <span id="year"></span> Montillas Holding.</p>
+
+      <div class="footer__links">
+        <a href="politicascookies.html" onclick="return true;">Política de Cookies</a>
+        <a href="politicasprivacidad.html" onclick="return true;">Política de Privacidad</a>
+        <a href="avisolegal.html" onclick="return true;">Aviso Legal</a>
+      </div>
+
+      <p class="footer__copy muted">© <span id="year"></span> Montillas Holding. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <!-- Floating WhatsApp -->
+  <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">
+    💬
+  </a>
 
   <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">💬</a>
   <script src="script.js"></script>
