i Changes to be committed:

--- a/Portafolio.html
+++ b/Portafolio.html
@@ -68,18 +68,15 @@
             </div>
 
             <div class="before-after" data-ba>
-              <img class="ba__img ba__after" src="Assets/ReformaIntegralHecha1.png" alt="Después - salón reformado">
+              <img class="ba__img ba__after zoomable" src="Assets/ReformaIntegralHecha1.png" alt="Después - salón reformado">
               <div class="ba__beforeWrap" data-beforewrap>
-                <img class="ba__img ba__before" src="Assets/ReformaIntegralLimpia1.png" alt="Antes - salón">
+              <img class="ba__img ba__before zoomable" src="Assets/ReformaIntegralLimpia1.png" alt="Antes - salón">
               </div>
 
               <div class="ba__labels">
                 <span class="ba__tag">ANTES</span>
                 <span class="ba__tag">DESPUÉS</span>
               </div>
-
-              <input class="ba__range" type="range" min="0" max="100" value="50" aria-label="Control antes y después" data-range>
-              <div class="ba__handle" data-handle aria-hidden="true"></div>
             </div>
 
             <p class="muted">
@@ -104,9 +101,6 @@
                 <span class="ba__tag">ANTES</span>
                 <span class="ba__tag">DESPUÉS</span>
               </div>
-
-              <input class="ba__range" type="range" min="0" max="100" value="50" aria-label="Control antes y después" data-range>
-              <div class="ba__handle" data-handle aria-hidden="true"></div>
             </div>
 
             <p class="muted">
@@ -131,9 +125,6 @@
                 <span class="ba__tag">ANTES</span>
                 <span class="ba__tag">DESPUÉS</span>
               </div>
-
-              <input class="ba__range" type="range" min="0" max="100" value="50" aria-label="Control antes y después" data-range>
-              <div class="ba__handle" data-handle aria-hidden="true"></div>
             </div>
 
             <p class="muted">
@@ -178,5 +169,12 @@
 
   <a class="fab" href="https://wa.me/34642584490" target="_blank" rel="noreferrer" aria-label="Abrir WhatsApp">💬</a>
   <script src="script.js"></script>
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+  <button class="lightbox__close" type="button">✕</button>
+  <img class="lightbox__img" alt="">
+</div>6592476-7
+0
+.60
+
 </body>
 </html>
