--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <label class="check">
               <input type="checkbox" required />
-              <span>He leído y acepto la <a href="#" onclick="return false;">Política de Privacidad</a>.</span>
+              <span>He leído y acepto la <a href="politicasprivacidad.html" onclick="return true;">Política de Privacidad</a>.</span>
             </label>
 
             <button class="btn btn--primary btn--block" type="submit">Quiero mi Presupuesto</button>
@@ -129,6 +129,16 @@
         </aside>
       </div>
     </section>
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyvO3iIKVXl9JLq1xlOp9w-VreoKiBtc4cq7D9Q469UU6w8Q/viewform?embedded=true" 
+width="640" 
+height="800" 
+frameborder="0" 
+marginheight="0" 
+marginwidth="0">
+Cargando…
+</iframe>
+
 
     <section class="about" id="nosotros">
   <div class="about__container">
